# snath-robotics

./: .gitignore  README.md  _lar.py  config.json  dhard.py  divergence_router.py  mujoco_d_hard.jsonl  mujoco_gru_d_hard.jsonl  mujoco_gru_d_hard_cls.jsonl  pyproject.toml  robotics_graph.py  test_temporal_decay.py
abstract_context_bridge_validation/: run_validation.py  validate_cb1_statelessness.py  validate_cb2_pure_function.py
core/: __init__.py  types.py
dmn/: __init__.py  adapter_router.py  robotics_dmn.py  sigreg.py
encoders/: __init__.py  _clip_backbone.py  clip_image_encoder.py  clip_text_encoder.py  gru_proprio_encoder.py  proprio_encoder.py  vision_encoder.py
encoders/robotics/: __init__.py  proprio_encoder.py  vision_encoder.py
encoders/vision_language/: __init__.py  _clip_backbone.py  clip_image_encoder.py  clip_text_encoder.py
experiments/: ablation_proof.py  coco_proof.py  curriculum_proof.py  gru_proof_20260613_002822.json  gru_proof_20260613_003259.json  mujoco_bipedal_proof.py  mujoco_bipedal_proof_gru.py  mujoco_bipedal_proof_trained.py  mujoco_proof_20260612_215949.json  mujoco_selfsup_proof.py  prove_learning.py  prove_policy.py  prove_transfer.py  results.json  selfsup_proof_20260613_190228.json  selfsup_proof_20260613_190531.json  selfsup_proof_20260613_190652.json  train_cls_walker2d.py  train_contrastive_walker2d.py  train_gru_walker2d.py  train_jepa_walker2d.py  train_momentum_walker2d.py  train_selfsup_walker2d.py
experiments/archive/: README.md
experiments/pav/: mujoco_bipedal_proof.py  (+14 more)
models/: jepa_loop.py  jepa_predictor.py
(+15 files in other folders)
